# dexa

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  agentic_real.py  cartridge_bench.py  frontier_bench.py  incremental_recompute_bench.py  niah_real.py  ondevice_incremental_bench.py  persist_demo.py  persist_format_bench.py  plot_niah.py  selective_recompute_bench.py  vllm_connector_check.py
benchmarks/results/: 2026-07-09-a100-8b-persist-native-load.json  2026-07-09-a100-8b-persist.json  2026-07-09-vllm-connector-check.json
configs/: agentic-8b.yaml  extreme-8b.yaml  harden-8b.yaml  llama31-8b-fast.yaml  llama31-8b-turbo.yaml  llama31-8b.yaml  llama32-1b.yaml  llama32-3b.yaml  smoke-cpu.yaml  still-train.yaml  validate-8b.yaml
docs/: ARCHITECTURE.md  BENCHMARK.md  BENCHMARK_PLAN.md  CARTRIDGES.md  CLUSTER.md  CONNECTOR_COMPLETION.md  INTEGRATION.md  RESULTS.md
docs/research/: 2026-07-09-independent-benchmarks.md
evals/: RESULTS.md  modal_eval_compute.py  modal_verifier_engine.py  modal_verifier_sched.py  modal_verifier_search.py  test_eval_verifiers.py
native/kvcodec/: Cargo.toml  README.md  pyproject.toml
native/kvcodec/src/: lib.rs
scripts/: modal_bench_contention.py  modal_bench_resume.py  modal_bench_serve.py  modal_connector_probe.py  modal_connector_serve.py  modal_connector_xinstance.py  modal_scale_and_connector.py  modal_validate.py  run_bench.sh  runpod_bootstrap.sh  setup_env.sh  validate_phase1.sh
scripts/slurm/: bench.sbatch  train_still.sbatch
src/dexa/: __init__.py  cli.py
src/dexa/bench/: __init__.py  _compactors.py  agentic.py  config.py  corpus.py  datasets.py  frontier.py  lmcache_baseline.py  metrics.py  persist.py  qa_metrics.py  report.py  run.py  runner.py  suites.py  tasks.py
src/dexa/cartridge/: __init__.py  artifact.py  compiler.py
src/dexa/compaction/: __init__.py  attention_matching.py  base.py  baselines.py
src/dexa/core/: types.py
src/dexa/engine/: __init__.py  base.py  fake.py  hf_backend.py  torch_session.py  vllm_backend.py  vllm_cartridge.py  vllm_connector.py  vllm_probe_connector.py
src/dexa/memory/: __init__.py  store.py  working_memory.py
src/dexa/segment/: __init__.py  model.py  plan.py  selective.py  session.py
tests/: test_am_advanced.py  test_bench.py  test_compaction.py  test_config_run.py  test_corpus_bench.py  test_datasets_metrics.py  test_frontier.py  test_hf_backend.py  test_incremental_recompute.py  test_rope_rephase.py  test_segment_plan.py  test_segmented_session.py  test_selective.py  test_selective_engine.py  test_session.py  test_session_manager.py  test_still.py  test_store.py  test_torch_session.py  test_vllm_backend.py  test_vllm_cartridge.py  test_vllm_connector.py  test_vllm_connector_check.py  test_working_memory.py
(+10 files in other folders)
