[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexa"
version = "0.1.0"
description = "Inference-state engine: persistent, mutable, versioned, governed KV state with incremental recompute."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Dexa contributors" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
# Real-engine / correctness backend (CPU-runnable, GPU-capable).
torch = [
    "torch>=2.2",
    "transformers>=4.44",
]
# Benchmark reporting + config-driven runs.
bench = [
    "matplotlib>=3.7",
    "rich>=13.0",
    "pyyaml>=6.0",
    "datasets>=2.14",
]
# HF stack WITHOUT torch — for environments where a CUDA torch is already
# present (e.g. RunPod PyTorch pods). Use: pip install -e '.[hf,bench]'
hf = [
    "transformers>=4.44",
    "accelerate>=0.30",
]
# vLLM integration (the KV-connector plugin) — install alongside a CUDA torch.
vllm = [
    "vllm>=0.6",
]
# GPU cluster deployment (alias).
gpu = [
    "vllm>=0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]

[project.scripts]
dexa = "dexa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "torch: requires torch + transformers (a real model)",
    "slow: slow benchmark-scale tests",
]
