[package]
name = "dexa-kvcodec"
version = "0.1.0"
edition = "2021"
description = "Native (Rust) accelerator for Dexa's KV blob format: parallel fp32->bf16/fp16 pack + streaming write."
license = "Apache-2.0"

[lib]
# Import name on the Python side: `from dexa.session import kvcodec`.
name = "kvcodec"
crate-type = ["cdylib"]

[dependencies]
# abi3 => one wheel works across CPython >=3.9 (matches the repo's optional-ext pattern).
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
